# sub-racer

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.libsamplerate  Makefile  README.md
.github/workflows/: linux.yml  macos.yml  tests.yml  windows.yml
src/: CMakeLists.txt  app_state.c  app_state.h  audio_extract.c  audio_extract.h  editor_actions.c  editor_actions.h  file_utils.c  file_utils.h  main.c  project.c  project.h  srt_io.c  srt_io.h  subtitle.c  subtitle.h  time_utils.c  time_utils.h  transcribe_thread.c  transcribe_thread.h  ui_editor.c  ui_editor.h  video_player.c  video_player.h  whisper_wrapper.c  whisper_wrapper.h
test/: CMakeLists.txt  test_subtitle.c  test_time.c
